--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="height">
  <div class="page">
 
-     <a href="-"><мобілочка></a>
+     <a href="https://r1leks.github.io/PHONES"><мобілочка></a>
 
-     <a href="-"><головна></a>
+     <a href="https://r1leks.github.io/GO-ITEENS/"><головна></a>
 
  </div>
     </div>
